// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User is able to use layout when [FRAGILE] allows to disable content padding 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR kbHHIn layout off-padding"
  >
    <header
      class="layout-top-nav"
    >
      <div>
        Header
      </div>
    </header>
    <main
      class="layout-content"
    >
      <div>
        Content
      </div>
    </main>
    <footer
      class="layout-footer"
    />
    <nav
      class="layout-bottom-nav"
    >
      <div />
    </nav>
  </div>
  <div
    class="sc-bcXHqe AVuto bar"
  >
    <button
      class="button size-2 rounded filled tertiary"
      motive="tertiary"
      shape="rounded"
      size="2"
    >
      <svg
        class="icon arrow-top-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.0001 20H11.0001V8L5.50008 13.5L4.08008 12.08L12.0001 4.16L19.9201 12.08L18.5001 13.5L13.0001 8V20Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`User is able to use layout when [FRAGILE] allows to pass sidebar and gives option to maintain it 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR kbHHIn layout asided"
  >
    <header
      class="layout-top-nav"
    >
      <div>
        Header
      </div>
    </header>
    <main
      class="layout-content"
    >
      <aside
        class="layout-content-sidebar"
      >
        <div>
          Sidebar: closed
        </div>
      </aside>
      <div>
        Content
      </div>
    </main>
    <footer
      class="layout-footer"
    />
    <nav
      class="layout-bottom-nav"
    >
      <div />
    </nav>
  </div>
  <div
    class="sc-bcXHqe AVuto bar"
  >
    <button
      class="button size-2 rounded filled tertiary"
      motive="tertiary"
      shape="rounded"
      size="2"
    >
      <svg
        class="icon arrow-top-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.0001 20H11.0001V8L5.50008 13.5L4.08008 12.08L12.0001 4.16L19.9201 12.08L18.5001 13.5L13.0001 8V20Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`User is able to use layout when [FRAGILE] allows to pass sidebar and gives option to maintain it 2`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR kbHHIn layout asided opened"
  >
    <header
      class="layout-top-nav"
    >
      <div>
        Header
      </div>
    </header>
    <main
      class="layout-content"
    >
      <aside
        class="layout-content-sidebar"
      >
        <div>
          Sidebar: opened
        </div>
      </aside>
      <div>
        Content
      </div>
    </main>
    <footer
      class="layout-footer"
    />
    <nav
      class="layout-bottom-nav"
    >
      <div />
    </nav>
  </div>
  <div
    class="sc-bcXHqe AVuto bar"
  >
    <button
      class="button size-2 rounded filled tertiary"
      motive="tertiary"
      shape="rounded"
      size="2"
    >
      <svg
        class="icon arrow-top-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.0001 20H11.0001V8L5.50008 13.5L4.08008 12.08L12.0001 4.16L19.9201 12.08L18.5001 13.5L13.0001 8V20Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`User is able to use layout when [FRAGILE] allows to skip footer 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR kbHHIn layout"
  >
    <header
      class="layout-top-nav"
    >
      <div>
        Header
      </div>
    </header>
    <main
      class="layout-content"
    >
      <div>
        Content
      </div>
    </main>
    <footer
      class="layout-footer"
    />
    <nav
      class="layout-bottom-nav"
    >
      <div />
    </nav>
  </div>
  <div
    class="sc-bcXHqe AVuto bar"
  >
    <button
      class="button size-2 rounded filled tertiary"
      motive="tertiary"
      shape="rounded"
      size="2"
    >
      <svg
        class="icon arrow-top-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.0001 20H11.0001V8L5.50008 13.5L4.08008 12.08L12.0001 4.16L19.9201 12.08L18.5001 13.5L13.0001 8V20Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`User is able to use layout when [FRAGILE] renders big contents 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR kbHHIn layout"
  >
    <header
      class="layout-top-nav"
    >
      <div>
        Header
      </div>
    </header>
    <main
      class="layout-content"
    >
      <div
        style="height: 110vh;"
      >
        Content
      </div>
    </main>
    <footer
      class="layout-footer"
    >
      <div>
        Footer
      </div>
    </footer>
    <nav
      class="layout-bottom-nav"
    >
      <div />
    </nav>
  </div>
  <div
    class="sc-bcXHqe AVuto bar"
  >
    <button
      class="button size-2 rounded filled tertiary"
      motive="tertiary"
      shape="rounded"
      size="2"
    >
      <svg
        class="icon arrow-top-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.0001 20H11.0001V8L5.50008 13.5L4.08008 12.08L12.0001 4.16L19.9201 12.08L18.5001 13.5L13.0001 8V20Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`User is able to use layout when [FRAGILE] renders with default setup 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR kbHHIn layout"
  >
    <header
      class="layout-top-nav"
    >
      <div>
        Header
      </div>
    </header>
    <main
      class="layout-content"
    >
      <div>
        Content
      </div>
    </main>
    <footer
      class="layout-footer"
    >
      <div>
        Footer
      </div>
    </footer>
    <nav
      class="layout-bottom-nav"
    >
      <div>
        <div>
          Bottom nav item
        </div>
      </div>
    </nav>
  </div>
  <div
    class="sc-bcXHqe AVuto bar"
  >
    <button
      class="button size-2 rounded filled tertiary"
      motive="tertiary"
      shape="rounded"
      size="2"
    >
      <svg
        class="icon arrow-top-icon"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.0001 20H11.0001V8L5.50008 13.5L4.08008 12.08L12.0001 4.16L19.9201 12.08L18.5001 13.5L13.0001 8V20Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
